--- a/templates/register.html
+++ b/templates/register.html
@@ -17,6 +17,14 @@
                         <label class="form-label">Nom affiché (ex: الأستاذ محمد)</label>
                         <input type="text" name="nom_affichage" class="form-control" required>
                     </div>
+                    <div class="mb-3">
+                        <label class="form-label">Nom de l'etablissement</label>
+                        <input type="text" name="school_name" class="form-control" placeholder="ex: College El Amal" required>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Matiere (ex: Sciences physiques)</label>
+                        <input type="text" name="subject_name" class="form-control" placeholder="ex: Sciences physiques" required>
+                    </div>
                     <div class="mb-4">
                         <label class="form-label">Mot de passe</label>
                         <input type="password" name="password" class="form-control" autocomplete="new-password" required>
