--- a/templates/admin.html
+++ b/templates/admin.html
@@ -44,6 +44,21 @@
                 <input type="text" name="display_name" class="form-control" required>
             </div>
             <div class="col-12 col-md-3">
+                <label class="form-label small text-muted">Etablissement</label>
+                <input type="text" name="school_name" class="form-control" placeholder="College El Amal" required>
+            </div>
+            <div class="col-12 col-md-3">
+                <label class="form-label small text-muted">Matiere</label>
+                <input type="text" name="subject_name" class="form-control" placeholder="Sciences physiques" required>
+            </div>
+            <div class="col-12 col-md-2">
+                <label class="form-label small text-muted">Verrouiller matiere</label>
+                <select name="lock_subject" class="form-select">
+                    <option value="1" selected>Oui</option>
+                    <option value="0">Non</option>
+                </select>
+            </div>
+            <div class="col-12 col-md-3">
                 <label class="form-label small text-muted">Mot de passe</label>
                 <input type="password" name="password" class="form-control" required>
             </div>
