--- a/templates/bulletin.html
+++ b/templates/bulletin.html
@@ -89,11 +89,11 @@
             <tbody>
                 <tr>
                     <td style="font-weight: bold; text-align: right; padding-right: 15px;">العلوم الفيزيائية</td>
-                    <td>{{ eleve['activite_t' + trimestre] }}</td>
-                    <td>{{ eleve['devoir_t' + trimestre] }}</td>
-                    <td>{{ eleve['compo_t' + trimestre] }}</td>
+                    <td>{{ eleve.activite }}</td>
+                    <td>{{ eleve.devoir }}</td>
+                    <td>{{ eleve.compo }}</td>
                     <td style="background-color: #f9f9f9; font-weight: 800; font-size: 18px;">{{ moyenne }}</td>
-                    <td style="font-size: 14px;">{{ eleve['remarques_t' + trimestre] }}</td>
+                    <td style="font-size: 14px;">{{ eleve.remarques }}</td>
                 </tr>
             </tbody>
         </table>
