--- a/templates/base.html
+++ b/templates/base.html
@@ -196,6 +196,9 @@ a { text-decoration: none; }
                         <a class="nav-link" href="/timetable">Emploi du temps</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="/attendance">Absences</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="/history">Historique</a>
                     </li>
                     {% if session.get('is_admin') %}
